# foodeverything

./: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pantry_photo_upload.py  pyproject.toml  render.yaml  requirements.txt  start.sh  tiktok_parse_recipes.py  tiktoks.json  webhook_server.py
digital_pantry/: pantry_photo_upload.py  pantry_server.py
legacy/: batch_extract_and_upload_ruth.py  extract_and_upload_ruth.py  extract_recipe_with_gpt.py  extract_ruth_recipe.py  render.yaml  requirements.txt  test_csv.py  tiktok_parse_recipes.py
legacy/data/: airtable_recipes_upload_ready.csv  cleaned_recipes.csv  part_000000.csv  substack_urls.txt
legacy/digital_pantry/: pantry_app.py
src/food_everything/: canonicalize.py  config.py  persist.py
src/food_everything/api/: main.py
src/food_everything/ingest/: airtable.py  family_ocr.py  gmail.py  image.py  instagram.py  pantry.py  substack.py  tiktok.py
supabase/: schema.sql
supabase/migrations/: 0001_cascade_recipe_ingredients.sql  0002_add_is_favorite.sql  0003_email_ingestions.sql  0004_airtable_import_support.sql  0005_local_imports.sql  0006_pantry_items.sql  0007_coverage_exclude_staples.sql  0008_normalize_ingredient.sql  0009_aliases_miso_sesame_oil.sql  0010_aliases_garlic.sql  0011_normalize_hyphens_and_lemon_lime.sql  0012_aliases_evoo_chile_flakes.sql  0013_aliases_parmesan.sql  0014_aliases_hot_sauce.sql  0015_aliases_cumin_sichuan_canola.sql  0016_aliases_stock_cucumber_hotpepper_milk.sql  0017_aliases_beef_chuck_coarse_salt_ground_pepper.sql  0018_alias_anchovy_paste.sql  0019_aliases_butter_speck.sql  0020_aliases_cumin_coriander_unified.sql  0021_aliases_grapeseed_pecorino_or_parmesan.sql  0022_aliases_diamond_apple_cider_parsley.sql  0023_aliases_thyme_parmigiano_reggiano_cheese_espelette.sql  0024_aliases_salt_and_pepper_compound.sql  0025_aliases_linguine_neutral_oil.sql  0026_aliases_breadcrumb_veg_stock_sparkling_water.sql  0027_alias_green_onion_scallion.sql  0028_ingredient_canonical_cache.sql  0029_recipe_coverage_dedupe_join.sql  0030_recipe_coverage_missing_names.sql  0031_recipe_coverage_raw_missing_names.sql  0032_tag_taxonomy_cleanup.sql  0033_enable_rls.sql
web/: next.config.ts  package-lock.json  package.json
web/src/app/: _back-link.tsx  _home-scroll-restorer.tsx  _recipe-card.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
web/src/lib/: pill-catalogs.ts  queries.ts  supabase.ts  (+1 more)
(+26 files in other folders)
