[project]
name = "food-everything"
version = "0.1.0"
description = "Recipe ingestion pipeline writing to Supabase."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "openai>=1.40",
    "pillow>=10.0",
    "pydantic>=2.7",
    "pypdfium2>=4.30",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "supabase>=2.5",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/food_everything"]

[tool.ruff]
line-length = 100
target-version = "py311"
